<?xml version="1.0"?>
<package format="3">
  <name>draw_s_flight_mode</name>
  <version>0.0.1</version>
  <description>Draw S flight mode for PX4 ROS 2</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen3_cmake_module</depend>
  <depend>Eigen3</depend>
  <depend>rclcpp</depend>
  <depend>px4_ros2_cpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>